# perdeu-playboy

./: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini
.github/workflows/: update-data.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  constants.py  database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/etl/: export_static_frontend.py  extract.py  load.py  medallion.py  run_pipeline.py  sinesp.py  sources.py  ssp_sp.py  transform.py
backend/app/services/: analytics.py  governor_performance.py  indicator_catalog.py  isp_repository.py  population_repository.py  territory_repository.py
backend/app/tests/: test_governor_performance.py  test_health.py  test_isp_repository.py  test_medallion.py  test_population_repository.py  test_sinesp.py  test_ssp_sp_resilience.py  test_territory_repository.py  test_transform.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
frontend/components/: ArmedGroupsMapPanel.tsx  ChangesExplorer.tsx  ChoroplethMap.tsx  CoverageNotice.tsx  DashboardExplorer.tsx  ErrorState.tsx  GovernorsExplorer.tsx  GovernorsPerformanceTable.tsx  IndicatorSelector.tsx  LoadingState.tsx  MapPanel.tsx  MethodologyBlock.tsx  MethodologyDrawer.tsx  MetricCard.tsx  MunicipalityChoroplethPanel.tsx  PeriodSelector.tsx  RankingTable.tsx  RankingsExplorer.tsx  SiteNav.tsx  (+5 more)
(+16 files in other folders)
